<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_info_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_info_version_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_dialog_info_version_header"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_version_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/dialog_info_version_h"
        android:layout_toRightOf="@+id/dialog_info_version_h"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_responsible_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/dialog_info_version_h"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/text_dialog_info_responsible_header"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_responsible_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_info_responsible_h"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/text_dialog_info_responsible_text"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_contact_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_info_responsible_t"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/text_dialog_info_contact_header"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_contact_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_info_contact_h"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/text_dialog_info_contact_text"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_hints_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_info_contact_t"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/text_dialog_info_hints_header"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dialog_info_hints_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_info_hints_h"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/text_dialog_info_hints_text"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>
